# ros_gz_project_template

ros_gz_example_application/: CMakeLists.txt
ros_gz_example_application/scripts/: cmd_send.py  cmd_vel_to_motor_cmd.py  imu.py  kalman_filter.py  plot_slip_vs_sim_time.py  pure_pursuit_controller.py  state_machine.py
ros_gz_example_bringup/: CMakeLists.txt  package.xml
ros_gz_example_bringup/config/: ekf.yaml  path.yaml  ros_gz_example_bridge.yaml  twist_mux.yaml
ros_gz_example_bringup/launch/: auto_v1.launch.py  duru.launch.py  teleop_tracked_real.launch.py  tracked_v1.launch.py
ros_gz_example_description/models/tracked_v1/: metadata.pbtxt  model.config  model.sdf
ros_gz_example_description/models/tracked_v2/: model.config  tracked_v2.sdf
ros_gz_example_description/models/tracked_v2/geometry/: wheel_v2.dae  wheel_v3.dae
ros_gz_example_gazebo/worlds/: agriculture_v1.sdf  agriculture_v2.sdf  diff_drive.sdf
ros_gz_example_gazebo/worlds/media/materials/scripts/: gazebo.material
